More Fixes  - Where in second search response getting DIGITAL-CONSULTATION irrespective of request service type (Physical/ teleconsultation)  - fixed speciality search issue where speciality search logic was flawed